--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "localforage": "^1.10.0",
     "monaco-editor": "^0.37.1",
     "prettier": "^2.8.7",
+    "re-resizable": "6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "8.0.5",
